# fastapi-milvus-vector-service

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  MilvusSchemaDesigner.py  README.md  docker-compose.yml  main.py  pyproject.toml  基本操作学习1.py
api/: graph_routes.py  qa_routes.py  routes.py
core/: config.py
db/: graph_store.py  milvus_client.py
docs/: framework_tutorial.md  implementation_notes.md  knowledge_graph_tutorial.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: chat.ts  document.ts  graph.ts  index.ts
frontend/src/layouts/: MainLayout.tsx
frontend/src/stores/: chat.ts  graph.ts
frontend/src/views/: ChatView.tsx  DashboardView.tsx  DocumentView.tsx  GraphView.tsx
schemas/: document.py  graph.py  qa.py
services/: graph_service.py  rag_service.py  session_service.py  vector_service.py
tests/: conftest.py  test_demo_embedding.py
tests/api/: test_document_routes.py  test_graph_routes.py
tests/unit/: test_bm25_retriever.py  test_entity_extractor.py  test_graph_store.py  test_llm_factory.py  test_query_rewriter.py
utils/: bm25_retriever.py  demo_embedding.py  entity_extractor.py  file_parser.py  graph_retriever.py  llm_factory.py  ollama_chat.py  ollama_embedding.py  openai_chat.py  query_rewriter.py  relation_extractor.py  reranker.py  text_chunker.py  text_cleaner.py
