[project]
name = "milvus-fastapi"
version = "0.1.0"
description = "A production-oriented FastAPI project for standardized Milvus usage in Python."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pymilvus[milvus-lite]>=2.4.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "ollama>=0.6.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools]
packages = ["api", "core", "db", "schemas", "services", "utils"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
